<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/book_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/book_title" />

        <TextView
            android:id="@+id/book_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/book_rating_star"
            app:layout_constraintBottom_toBottomOf="@+id/book_rating_star" />

        <RatingBar
            android:id="@+id/book_rating_star"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:numStars="5"
            android:rating="0.5"
            android:stepSize="0.5"
            app:layout_constraintTop_toBottomOf="@+id/book_subtitle"
            app:layout_constraintStart_toEndOf="@+id/book_rating" />

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toBottomOf="@+id/book_rating_star" />

        <TextView
            android:id="@+id/book_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:paddingTop="4dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/book_image" />

        <TextView
            android:id="@+id/book_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/book_price" />

        <TextView
            android:id="@+id/book_info"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/book_authors"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/book_authors"
            app:layout_constraintEnd_toStartOf="@+id/book_authors"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_desc" />

        <TextView
            android:id="@+id/book_authors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/book_info"
            app:layout_constraintTop_toBottomOf="@+id/book_desc" />

        <TextView
            android:id="@+id/book_info2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/book_publisher"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/book_publisher"
            app:layout_constraintEnd_toEndOf="@+id/book_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_info" />

        <TextView
            android:id="@+id/book_publisher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/book_info2"
            app:layout_constraintTop_toBottomOf="@+id/book_info" />


        <TextView
            android:id="@+id/book_info3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/book_years"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/book_years"
            app:layout_constraintEnd_toEndOf="@+id/book_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_info2" />

        <TextView
            android:id="@+id/book_years"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/book_info3"
            app:layout_constraintTop_toBottomOf="@+id/book_publisher" />


        <TextView
            android:id="@+id/book_info4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/book_language"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/book_language"
            app:layout_constraintEnd_toEndOf="@+id/book_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_info3" />

        <TextView
            android:id="@+id/book_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/book_info2"
            app:layout_constraintTop_toBottomOf="@+id/book_years" />


        <TextView
            android:id="@+id/book_info5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/book_pages"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/book_pages"
            app:layout_constraintEnd_toEndOf="@+id/book_info"
            app:layout_constraintStart_toStartOf="@+id/book_info4"
            app:layout_constraintTop_toBottomOf="@+id/book_info4" />

        <TextView
            android:id="@+id/book_pages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/book_info7"
            app:layout_constraintTop_toBottomOf="@+id/book_language" />


        <TextView
            android:id="@+id/book_info6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/book_isbn10"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/book_isbn10"
            app:layout_constraintEnd_toEndOf="@+id/book_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/book_info5" />

        <TextView
            android:id="@+id/book_isbn10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/book_info7"
            app:layout_constraintTop_toBottomOf="@id/book_pages" />


        <TextView
            android:id="@+id/book_info7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/book_isbn13"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/book_isbn13"
            app:layout_constraintEnd_toEndOf="@+id/book_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_info6" />

        <TextView
            android:id="@+id/book_isbn13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/book_info7"
            app:layout_constraintTop_toBottomOf="@id/book_isbn10" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>